test/fail/error_coercion5.sest
module ErrorCoercion5 = struct
  module Impl = struct
    type t = int
    val make(x) = x
  end

  module Sub = Impl :> sig
    type t :: o
    val make : fun(int) -> t
  end

  val main() =
    Sub.make(5) + 1
end
